2010-12-19  Matevz Tadel  <matevz.tadel@ijs.si>

	Add A_Rnr::HandlePick() function -- it can be called via a
	context-menu entry in Pupil.

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	Extend pick_menu_data to also hold name-stack list and name-stack
	iterator for given entry.

	Add pick-menu entry "Deliver Event" that triggers callback into
	A_Rnr::HandlePick() (new function, see below).

	Move the struct and supporting functions into Pupil (was in
	unnamed namespace before).

	* RnrBase/A_Rnr.h:
	Add a new virtual function:
	  virtual void HandlePick(RnrDriver* rd, lNSE_t& ns, lNSE_i nsi) {}

	* Rnr/GL/WGlDirectory_GL_Rnr.cxx:
	* Rnr/GL/WGlDirectory_GL_Rnr.h:
	As a demonstration, implement HandlePick().

2010-12-12  Matevz Tadel  <matevz.tadel@ijs.si>

	Simplify Saturn -> Eye communication.

	Drop special TextMessage class, use special rays from EyeInfo instead.
	Eye needs to look for them, they are forwarded to
	  virtual void AbsorbEyeInfoRay(Ray& ray);
	where sub-classes can add further actions.

	* Ephra/Saturn.cxx:
	* Ephra/Saturn.h:
	Remove text-message sending.
	Send Ray* directly, not in an SaturnToEyeEnvelope.
	White space.

	* Eye/Eye.cxx:
	* Eye/Eye.h:
	Receive Ray* directly.
	Start setting up functions for clean Eye shutdown.
	White & gray space.

	* Eye/Ray.h:
	Remove SaturnToEyeEnvelope, EyeCommand and TextMessage classes.

	* Glasses/EyeInfo.cxx:
	* Glasses/EyeInfo.h:
	Add EyeInfoVector member for sending special rays to *the* Eye.
	Add custom ray qunatum numbers.
	Add proteted set_eye(Eye*) so that operation can be properly locked.
	Rewrite Message/Warning/Error to send rays.

	* GledView/FTW_Shell.cxx:
	* GledView/FTW_Shell.h:
	Make shell menus clearer.
	White space.

	* Glasses/ZQueen.cxx:
	* Glasses/ZQueen.h:
	Move constructors to src file.
	Add destructor.

	* Gled/GledNS.h:
	Remove Saturn->Eye message types (were commented out already).

	* Glasses/ZGlass.h:
	* Stones/ZComet.cxx:
	Gray space.

	* Glasses/ZSunQueen.cxx:
	White space.
